syntax = "proto3";

message EnterMatchmakingRequest {
	string partyId = 1;
}